@@ -1,5 +1,6 @@
 0.0.18:
 changed fireball turret model;
+implemented automatic ammo refill;
 
 0.0.17:
 drones can be set to follow, stay, or guard area;
